# telepathy-glib

./: .gitignore  AUTHORS  Android.mk  COPYING  ChangeLog  Makefile.am  NEWS  NEWS-0.x  README  TESTING  TODO  UPGRADING  _boring  autogen.sh  check-c-style.sh  check-coding-style.mk  check-misc.sh  configure.ac  do_gen.sh  gstcodecs.conf  next-NEWS  telepathy-glib-unstable.pc.in  tp-media-session-handler.xml  tp-media-stream-handler.xml
api/: Channel_Handler.xml  Makefile.am  Stream_Engine.xml  all.xml  api-cli.c  api.c  api.h  misc.xml
data/: Logger.Call.client.in  Logger.Observer.client.in  Logger.Recover.client.in  Logger.Text.client.in  Logger.client  Makefile.am  TelepathyLogger.client  dbus-service.xml  im.telepathy.v1.Client.Logger.service.in  im.telepathy.v1.Logger.gschema.xml.in  im.telepathy.v1.Logger.service.in  im.telepathy1.Client.Logger.service.in  im.telepathy1.Logger.service.in  log-manager.xsl  org.freedesktop.Telepathy.Client.Logger.service.in  org.freedesktop.Telepathy.Logger.gschema.xml.in  org.freedesktop.Telepathy.Logger.service.in  org.freedesktop.Telepathy.StreamEngine.service.in  org.freedesktop.Telepathy.TelepathyLoggerService.service.in  org.freedesktop.Telepathy.VoipEngine.chandler  org.freedesktop.Telepathy.VoipEngine.service  org.freedesktop.Telepathy.VoipEngine.service.in  org.maemo.Telepathy.StreamEngine.service.in  telepathy-logger.schemas
doc/: Makefile.am  README  make-call.pic  sequence.pic
examples/: .gitignore  Makefile.am  README  call-handler.c  tp-glib-examples.supp
extensions/: Call_Content_Codec_Offer.xml  Call_Content_Interface_Audio_Control.xml  Call_Content_Interface_Media.xml  Call_Stream.xml  Call_Stream_Endpoint.xml  Call_Stream_Interface_Media.xml  Logger.xml  Makefile.am  Telepathy_Logger.xml  all.xml  call-content.c  call-content.h  call-content.xml  call-stream.c  call-stream.h  call-stream.xml  channel.xml  extensions-cli.c  extensions.c  extensions.h  misc.xml
inspector/: Makefile.am
lib/: Makefile.am  channel.c  channel.h  session-priv.h  session.c  session.h  stream-priv.h  stream.c  stream.h  tpmedia-signals-marshal.list
python/: Makefile.am  pytpfarsight-filter.defs  pytpfarsight.defs  pytpfarsight.override  pytpfarsightmodule.c  pytpfarsightold.defs  pytpfarstream-filter.defs  pytpfarstream.defs  pytpfarstream.override  pytpfarstreammodule.c  rebuild-defs.sh
spec/: Account.xml  Account_Interface_Addressing.xml  Account_Interface_Addressing1.xml  Account_Interface_Avatar.xml  Account_Interface_External_Password_Storage.xml  Account_Interface_Hidden.xml  Account_Interface_Storage.xml  Account_Manager.xml  Account_Manager_Interface_Hidden.xml  Call1_Stream_Interface_Media.xml  Call_Content.xml  Call_Content_Codec_Offer.xml  Call_Content_Interface_Audio_Control.xml  Call_Content_Interface_DTMF.xml  Call_Content_Interface_Media.xml  Call_Content_Interface_Mute.xml  Call_Content_Interface_Video_Control.xml  Call_Content_Media_Description.xml  Call_Content_Media_Description_Interface_RTCP_Extended_Reports.xml  Call_Content_Media_Description_Interface_RTCP_Feedback.xml  Call_Content_Media_Description_Interface_RTP_Header_Extensions.xml  Call_Interface_Mute.xml  Call_Stream.xml  Call_Stream_Endpoint.xml  Call_Stream_Interface_Media.xml  Channel.xml  Channel_Dispatch_Operation.xml  Channel_Dispatcher.xml  Channel_Dispatcher_Interface_Messages1.xml  Channel_Dispatcher_Interface_Operation_List.xml  Channel_Future.xml  Channel_Handler.xml  Channel_Interface_Addressing.xml  Channel_Interface_Addressing1.xml  Channel_Interface_Anonymity.xml  Channel_Interface_Call_Merging.xml  Channel_Interface_Call_State.xml  Channel_Interface_Chat_State.xml  Channel_Interface_Conference.xml  Channel_Interface_Conference1.xml  (+109 more)
src/: HeadlessLogger.client  Makefile.am  audiostream.c  audiostream.h  channel.c  channel.h  compile.sh  dbus-service.c  dbus-service.h  media-engine-main.c  misc-signals-marshal.list  org.freedesktop.Telepathy.Client.TelepathyLogger.client  org.freedesktop.Telepathy.Client.TelepathyLogger.service.in  org.freedesktop.Telepathy.TelepathyLoggerService.service.in  session.c  session.h  stream-engine-main.c  stream.c  stream.h  telepathy-errors.c  telepathy-errors.h  telepathy-logger-dbus.c  telepathy-logger-dbus.h  telepathy-logger.c  test-api.c  test.c  test_api.c  tp-channel-handler.c  tp-channel-handler.h  tp-media-engine.c  tp-media-engine.h  tp-media-session-handler.c  tp-media-session-handler.h  tp-stream-engine-signals-marshal.list  tp-stream-engine.c  tp-stream-engine.h  tp-stream-engine.xml  tp-voip-engine.c  tp-voip-engine.h  tpl-channel.c  (+55 more)
telepathy-farsight/: Makefile.am  call-channel.c  call-channel.h  call-content.c  call-content.h  call-stream.c  call-stream.h  channel.c  channel.h  content-priv.h  content.c  content.h  media-signalling-channel.c  session-priv.h  session.c  session.h  stream-priv.h  stream.c  stream.h  telepathy-farsight-uninstalled.pc.in  telepathy-farsight.pc.in  tpmedia-signals-marshal.list  utils.h
telepathy-farstream/: 1.0.abi  Makefile.am  NEWS  README  call-channel.c  call-channel.h  call-content.c  call-content.h  call-priv.h  call-stream.c  call-stream.h  channel-priv.h  channel.c  channel.h  content-priv.h  content.c  content.h  media-signalling-channel.c  media-signalling-channel.h  media-signalling-content.c  media-signalling-content.h  session-priv.h  session.c  stream.c  stream.h  telepathy-farstream-1.pc.in  telepathy-farstream-uninstalled-1.pc.in  telepathy-farstream-uninstalled.pc.in  telepathy-farstream.c  telepathy-farstream.h  telepathy-farstream.pc.in  utils.h
telepathy-glib/: Makefile.am  TelepathyGLib-0.12.metadata  TelepathyGLibDBus-1.metadata  abi.am  account-channel-request-internal.h  account-channel-request.c  account-channel-request.h  account-channels.c  account-internal.h  account-manager-internal.h  account-manager.c  account-manager.h  account-request.c  account-request.h  account.c  account.h  account.xml  add-dispatch-operation-context-internal.h  add-dispatch-operation-context.c  add-dispatch-operation-context.h  asv.c  asv.h  avatars-mixin.c  (+358 more)
(+860 files in other folders)
